<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="es.uclm.esi.tfg.educhat.MainActivity">
    <item
        android:id="@+id/mnuBtnCrearGrupo"
        android:orderInCategory="100"
        android:title="@string/mnuBtnCrearChat"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/mnuBtnPerfil"
        android:orderInCategory="100"
        android:title="@string/mnuBtnPerfil"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/mnuBtnSalir"
        android:orderInCategory="100"
        android:title="@string/mnuBtnCerrarSesion"
        app:showAsAction="never" />
</menu>
