<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PerfilUsuarioActivity">

    <ImageView
        android:id="@+id/imgPerfil"
        android:layout_width="116dp"
        android:layout_height="107dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="148dp"
        android:layout_marginLeft="147dp"
        android:layout_marginRight="148dp"
        android:layout_marginStart="147dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/usuario64" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnEliminarImagenPerfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="100dp"
            android:layout_marginStart="99dp"
            android:layout_weight="1"
            android:enabled="false"
            android:gravity="center"
            android:text="@string/btnEliminarImagenPerfil"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgPerfil" />

        <Button
            android:id="@+id/btnCambiarImagenPerfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="100dp"
            android:layout_marginStart="99dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/btnCambiarImagenPerfil"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgPerfil" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblNombreTutor1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lblNombreTutor1"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtNombreTutor1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="14sp" />

            <View
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_weight="1"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/lblCorreoTutor1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lblCorreoTutor1"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtCorreoTutor1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_weight="1"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/lblTelefonoTutor1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lblTelefonoTutor1"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtTelefonoTutor1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="14sp" />

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_weight="1"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/lblNombreTutor2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lblNombreTutor2"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtNombreTutor2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="14sp" />

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_weight="1"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/lblCorreoTutor2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lblCorreoTutor2"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtCorreoTutor2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <View
                android:id="@+id/divider5"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_weight="1"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/lblTelefonoTutor2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lblTelefonoTutor2"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtTelefonoTutor2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="14sp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>